samples/_failures_safe/1761416741_181e7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfa8dbf3.c: In function ‘main’:
./samples/SAFE/__tmp_dfa8dbf3.c:166:13: error: expected expression at end of input
  166 |             printf("Node %d: %d\n",
      |             ^~~~~~
./samples/SAFE/__tmp_dfa8dbf3.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dfa8dbf3.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dfa8dbf3.c:166:13: error: expected declaration or statement at end of input
